i hate css, i hate next js. it's TAKING way TOO LONG to fix this component. I miss document.getElementByClassName man

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@ button {
 img {
   display: block;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 textarea {
   display: block;
