--- a/components/GoodInfo/GoodInfo.module.css
+++ b/components/GoodInfo/GoodInfo.module.css
@@ -2,7 +2,7 @@
   position: relative;
   border-radius: 16px;
   width: 100%;
-  height: 412px;
+  height: 413px;
   overflow: hidden;
   margin-bottom: 16px;
 }
@@ -57,13 +57,13 @@
 
 @media only screen and (min-width: 768px) {
   .imageWrapper {
-    height: 244px;
+    /* height: 244px; */
   }
 }
 
 @media only screen and (min-width: 1440px) {
   .imageWrapper {
-    height: 356px;
+    /* height: 356px; */
   }
   .infoBlock_name {
     font-size: 18px;
