--- a/components/GoodsList/GoodsList.module.css
+++ b/components/GoodsList/GoodsList.module.css
@@ -2,23 +2,26 @@
   display: flex;
   /* flex-grow: 10; */
   flex-wrap: wrap;
+  flex-direction: row;
   justify-content: end;
   /* grid-template-columns: 1fr; */
   gap: 32px;
   width: 100%;
-}
-
-@media only screen and (min-width: 768px) {
-  .goodsList {
-    /* grid-template-columns: 1fr 1fr; */
-  }
+  /* height: max-content; */
 }
 
 .goodItem {
   display: flex;
   justify-content: center;
-  width: 198px;
-  height: 423px;
+  flex-direction: column;
+  /* width: 198px; */
+  /* width: 100%; */
+  /* height: 423px; */
+}
+@media only screen and (min-width: 768px) {
+  .goodsList {
+    /* grid-template-columns: 1fr 1fr; */
+  }
 }
 
 @media only screen and (min-width: 1440px) {
@@ -27,6 +30,24 @@
   }
 
   .goodItem {
-    width: 304px;
+    /* width: 304px; */
+  }
+}
+
+.goodsPageList {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 32px;
+}
+
+@media only screen and (min-width: 768px) {
+  .goodsPageList {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .goodsPageList {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
